<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout

            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <TextView
                android:id="@+id/textViewAlternativeIndie"
                style="@style/GenreStyle"
                android:background="@color/genre_alternative_indie"
                android:text="@string/alternative_indie" />

            <TextView
                android:id="@+id/textViewCountry"
                style="@style/GenreStyle"
                android:background="@color/genre_country"
                android:text="@string/country" />

            <TextView
                android:id="@+id/textViewDance_electronic"
                style="@style/GenreStyle"
                android:background="@color/genre_dance_electronic"
                android:text="@string/dance_electronic" />

            <TextView
                android:id="@+id/textViewPop"
                style="@style/GenreStyle"
                android:background="@color/genre_pop"
                android:text="@string/pop" />

            <TextView
                android:id="@+id/textViewRock"
                style="@style/GenreStyle"
                android:background="@color/genre_rock"
                android:text="@string/rock" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>
